# valiqor-tracing-sdk-demo

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_context.json
examples/: eval_output.json  sample_trace.jsonl  simple_rag_demo.py
tests/: test_context_scanner.py  test_trace_minimal.py
valiqor/: __init__.py  cli.py  context_scanner.py  redact.py  trace.py
valiqor/sinks/: __init__.py  file_sink.py
valiqor_trace_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
